--- a/app/src/main/res/layout/activity_detail_page.xml
+++ b/app/src/main/res/layout/activity_detail_page.xml
@@ -17,7 +17,7 @@
         tools:ignore="MissingConstraints">
 
         <ImageView
-            android:id="@+id/back"
+            android:id="@+id/iv_detail_back_btn"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="5dp"
@@ -27,19 +27,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
         <TextView
-            android:id="@+id/my_page_or_detail"
+            android:id="@+id/tv_detail_my_page_or_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/detail_activity_detail"
             android:textStyle="bold"
             android:textSize="20sp"
-            app:layout_constraintStart_toEndOf="@id/back"
+            app:layout_constraintStart_toEndOf="@id/iv_detail_back_btn"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"/>
 
         <TextView
-            android:id="@+id/edit"
+            android:id="@+id/tv_detail_edit_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -52,39 +52,39 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/detail_activity_id"
+            android:id="@+id/tv_detail_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:textStyle="bold"
             android:text=" Lorem Ipsum"
             android:textSize="20sp"
-            app:layout_constraintStart_toEndOf="@id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView" />
+            app:layout_constraintStart_toEndOf="@id/cv_detail_profile"
+            app:layout_constraintTop_toTopOf="@+id/cv_detail_profile" />
 
         <TextView
-            android:id="@+id/detail_activity_name"
+            android:id="@+id/tv_detail_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:text=" Lorem Ipsum."
             android:textSize="20sp"
-            app:layout_constraintStart_toEndOf="@id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/detail_activity_id" />
+            app:layout_constraintStart_toEndOf="@id/cv_detail_profile"
+            app:layout_constraintTop_toBottomOf="@+id/tv_detail_id" />
 
         <TextView
-            android:id="@+id/detail_activity_status_message"
+            android:id="@+id/tv_detail_status_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:text=" Lorem Ipsum."
             android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/detail_activity_name" />
+            app:layout_constraintStart_toEndOf="@id/cv_detail_profile"
+            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />
 
         <TextView
-            android:id="@+id/logout"
+            android:id="@+id/tv_detail_logout_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
@@ -95,7 +95,7 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/imageView"
+            android:id="@+id/cv_detail_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
@@ -105,7 +105,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/profile_img"
+                android:id="@+id/iv_detail_profile"
                 android:scaleType="centerCrop"
                 android:clipToOutline="true"
                 android:layout_width="100dp"
@@ -122,7 +122,7 @@
 
 
         <LinearLayout
-            android:id="@+id/post_layout"
+            android:id="@+id/layout_detail_post_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
