--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_signin_app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="별개냥"
@@ -22,7 +22,7 @@
         android:layout_marginTop="80dp"/>
 
     <TextView
-        android:id="@+id/tv_id"
+        android:id="@+id/tv_sigup_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -33,10 +33,10 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_signin_app_name" />
 
     <EditText
-        android:id="@+id/et_sign_in_id"
+        android:id="@+id/et_signin_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
@@ -44,24 +44,24 @@
         android:hint="아이디를 입력하세요."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_id"
+        app:layout_constraintTop_toBottomOf="@+id/tv_sigup_id"
         android:backgroundTint="@color/component_color"
         android:layout_marginStart="40dp"/>
 
     <TextView
-        android:id="@+id/error_text_id"
+        android:id="@+id/tv_signin_id_error"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
         android:text="@string/empty_id_message"
         android:textColor="@color/red"
-        app:layout_constraintStart_toStartOf="@+id/et_sign_in_id"
-        app:layout_constraintTop_toBottomOf="@+id/et_sign_in_id"
+        app:layout_constraintStart_toStartOf="@+id/et_signin_id"
+        app:layout_constraintTop_toBottomOf="@+id/et_signin_id"
         android:visibility="invisible"/>
 
     <TextView
-        android:id="@+id/tv_password"
+        android:id="@+id/tv_signup_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -69,33 +69,33 @@
         android:text="비밀번호"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/error_text_id"
-        app:layout_constraintTop_toBottomOf="@+id/error_text_id" />
+        app:layout_constraintStart_toStartOf="@+id/tv_signin_id_error"
+        app:layout_constraintTop_toBottomOf="@+id/tv_signin_id_error" />
 
     <EditText
-        android:id="@+id/et_sign_in_password"
+        android:id="@+id/et_signin_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
         android:inputType="textPassword"
         android:hint="비밀번호를 입력하세요."
         android:layout_marginStart="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_password" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password" />
 
     <TextView
-        android:id="@+id/error_text_password"
+        android:id="@+id/tv_signin_password_error"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/password_error_message"
         android:textColor="@color/red"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        app:layout_constraintStart_toStartOf="@+id/et_sign_in_password"
-        app:layout_constraintTop_toBottomOf="@+id/et_sign_in_password"
+        app:layout_constraintStart_toStartOf="@+id/et_signin_password"
+        app:layout_constraintTop_toBottomOf="@+id/et_signin_password"
         android:visibility="invisible"/>
 
     <Button
-        android:id="@+id/btn_signin"
+        android:id="@+id/btn_signin_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="false"
@@ -108,10 +108,10 @@
         android:layout_marginTop="20dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/error_text_password" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_signin_password_error" />
 
     <Button
-        android:id="@+id/btn_signup"
+        android:id="@+id/btn_signin_signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -120,11 +120,10 @@
         android:text="회원가입"
         android:textColor="@color/text_color"
         android:textSize="24sp"
-
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/btn_signin"
+        app:layout_constraintTop_toBottomOf="@+id/btn_signin_login"
         android:layout_marginTop="40dp" />
 
 
