--- a/app/src/main/res/layout/main_post_item.xml
+++ b/app/src/main/res/layout/main_post_item.xml
@@ -11,7 +11,7 @@
         android:background="@color/component_color">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/main_activity_user_ic"
+            android:id="@+id/cv_main_user"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="10dp"
@@ -23,30 +23,30 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/main_activity_user_profile"
+                android:id="@+id/iv_main_post_userprofile"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/img_cat1"
                 android:scaleType="centerCrop"
                 android:clipToOutline="true"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/detail_activity_list_contents" />
+                app:layout_constraintTop_toBottomOf="@id/tv_detail_post_list_contents" />
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/main_activity_user_name"
+            android:id="@+id/tv_main_post_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:text=" Lorem Ipsum."
             android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@id/main_activity_user_ic"
-            app:layout_constraintStart_toEndOf="@id/main_activity_user_ic"
-            app:layout_constraintTop_toTopOf="@id/main_activity_user_ic" />
+            app:layout_constraintBottom_toBottomOf="@id/cv_main_user"
+            app:layout_constraintStart_toEndOf="@id/cv_main_user"
+            app:layout_constraintTop_toTopOf="@id/cv_main_user" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
-        android:id="@+id/main_activity_list_img"
+        android:id="@+id/iv_main_post"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:scaleType="fitXY"
@@ -58,7 +58,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/main_activity_list_contents"
+            android:id="@+id/tv_main_post_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -71,36 +71,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
         <TextView
-            android:id="@+id/main_show_more"
+            android:id="@+id/tv_main_post_show_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/show_more"
             android:layout_marginTop="5dp"
-            app:layout_constraintStart_toEndOf="@id/main_activity_list_contents"
-            app:layout_constraintTop_toTopOf="@id/main_activity_list_contents"
-            app:layout_constraintBottom_toBottomOf="@id/main_activity_list_contents"/>
+            app:layout_constraintStart_toEndOf="@id/tv_main_post_content"
+            app:layout_constraintTop_toTopOf="@id/tv_main_post_content"
+            app:layout_constraintBottom_toBottomOf="@id/tv_main_post_content"/>
 
         <ImageView
-            android:id="@+id/main_like_button"
+            android:id="@+id/btn_main_post_like"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:src="@drawable/selector_heart_button"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/main_like_count"
+            app:layout_constraintEnd_toStartOf="@id/tv_main_post_like_count"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/main_like_count"
+            android:id="@+id/tv_main_post_like_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="5dp"
             android:text="a"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@id/main_like_button"
+            app:layout_constraintBottom_toBottomOf="@id/btn_main_post_like"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/main_like_button" />
+            app:layout_constraintTop_toTopOf="@id/btn_main_post_like" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
