--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="textView2" type="id" />
-    <item name="ib_profile1" type="id" />
-    <item name="ib_profile2" type="id" />
-    <item name="ib_profile3" type="id" />
-    <item name="ib_profile4" type="id" />
-    <item name="ib_profile5" type="id" />
-    <item name="ib_profile6" type="id" />
-    <item name="ib_profile7" type="id" />
-    <item name="ib_profile8" type="id" />
-    <item name="ib_profile9" type="id" />
-    <item name="ib_profile10" type="id" />
-    <item name="ib_profile11" type="id" />
-    <item name="ib_profile12" type="id" />
-    <item name="iv_selected_image" type="id" />
-    <item name="btn_next" type="id" />
+    <item name="tv_choose_title" type="id" />
+    <item name="ib_choose_profile_sample1" type="id" />
+    <item name="ib_choose_profile_sample2" type="id" />
+    <item name="ib_choose_profile_sample3" type="id" />
+    <item name="ib_choose_profile_sample4" type="id" />
+    <item name="ib_choose_profile_sample5" type="id" />
+    <item name="ib_choose_profile_sample6" type="id" />
+    <item name="ib_choose_profile_sample7" type="id" />
+    <item name="ib_choose_profile_sample8" type="id" />
+    <item name="ib_choose_profile_sample9" type="id" />
+    <item name="ib_choose_profile_sample10" type="id" />
+    <item name="ib_choose_profile_sample11" type="id" />
+    <item name="ib_choose_profile_sample12" type="id" />
+    <item name="iv_choose_selected_profile" type="id" />
+    <item name="btn_choose_signup" type="id" />
 </resources>
