--- a/app/src/main/res/layout/activity_detail_page.xml
+++ b/app/src/main/res/layout/activity_detail_page.xml
@@ -26,17 +26,18 @@
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/tv_detail_my_page_or_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/detail_activity_detail"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            app:layout_constraintStart_toEndOf="@id/iv_detail_back_btn"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"/>
+            android:text="@string/detail_activity_detail"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/iv_detail_back_btn"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_detail_edit_btn"
@@ -56,9 +57,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:textStyle="bold"
             android:text=" Lorem Ipsum"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/cv_detail_profile"
             app:layout_constraintTop_toTopOf="@+id/cv_detail_profile" />
 
@@ -106,10 +107,10 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/iv_detail_profile"
-                android:scaleType="centerCrop"
-                android:clipToOutline="true"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:clipToOutline="true"
+                android:scaleType="centerCrop"
                 tools:srcCompat="@tools:sample/avatars" />
         </androidx.cardview.widget.CardView>
 
