--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_color"
     android:paddingLeft="40dp"
-    android:paddingRight="40dp"
     android:paddingTop="80dp"
-    android:background="@color/background_color">
+    android:paddingRight="40dp">
 
     <TextView
         android:id="@+id/tv_signup_name"
@@ -54,8 +54,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="15"
-        android:inputType="text"
         android:hint="아이디를 입력하세요."
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="@+id/tv_sigup_id"
         app:layout_constraintStart_toStartOf="@+id/tv_sigup_id"
         app:layout_constraintTop_toBottomOf="@+id/tv_sigup_id" />
@@ -78,7 +78,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/tv_signup_id_error"
         app:layout_constraintStart_toStartOf="@+id/tv_signup_id_error"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_id_error"  />
+        app:layout_constraintTop_toBottomOf="@+id/tv_signup_id_error" />
 
     <EditText
         android:id="@+id/et_signup_password"
@@ -89,7 +89,7 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/tv_signup_password"
         app:layout_constraintStart_toStartOf="@+id/tv_signup_password"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password"  />
+        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password" />
 
     <TextView
         android:id="@+id/tv_signup_password_error"
@@ -99,7 +99,8 @@
         android:textColor="@color/red"
         app:layout_constraintEnd_toEndOf="@+id/et_signup_password"
         app:layout_constraintStart_toStartOf="@+id/et_signup_password"
-        app:layout_constraintTop_toBottomOf="@+id/et_signup_password"  />
+        app:layout_constraintTop_toBottomOf="@+id/et_signup_password" />
+
     <TextView
         android:id="@+id/tv_signup_password2"
         android:layout_width="match_parent"
@@ -109,16 +110,18 @@
         app:layout_constraintEnd_toEndOf="@+id/tv_signup_password_error"
         app:layout_constraintStart_toStartOf="@+id/tv_signup_password_error"
         app:layout_constraintTop_toBottomOf="@+id/tv_signup_password_error" />
+
     <EditText
         android:id="@+id/et_signup_password2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="15"
-        android:inputType="textPassword"
         android:hint="비밀번호를 다시 입력하세요."
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/tv_signup_password2"
         app:layout_constraintStart_toStartOf="@+id/tv_signup_password2"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password2"/>
+        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password2" />
+
     <TextView
         android:id="@+id/tv_signup_password2_error"
         android:layout_width="match_parent"
@@ -127,19 +130,18 @@
         android:textColor="@color/red"
         app:layout_constraintEnd_toEndOf="@+id/et_signup_password2"
         app:layout_constraintStart_toStartOf="@+id/et_signup_password2"
-        app:layout_constraintTop_toBottomOf="@+id/et_signup_password2"/>
+        app:layout_constraintTop_toBottomOf="@+id/et_signup_password2" />
 
     <Button
         android:id="@+id/btn_signup_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/next"
-        android:textColor="@color/text_color"
+        android:layout_marginTop="60dp"
         android:backgroundTint="@color/component_color"
         android:enabled="false"
-        android:layout_marginTop="60dp"
+        android:text="@string/next"
+        android:textColor="@color/text_color"
         app:layout_constraintEnd_toEndOf="@+id/tv_signup_password2_error"
         app:layout_constraintStart_toStartOf="@+id/tv_signup_password2_error"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password2_error"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password2_error" />
 </androidx.constraintlayout.widget.ConstraintLayout>
