--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -8,7 +8,8 @@
     <ImageView
         android:id="@+id/iv_detail_post_list_img"
         android:layout_width="match_parent"
-        android:layout_height="210dp"
+        android:layout_height="300dp"
+        android:scaleType="fitXY"
         android:src="@drawable/img_dog1" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,35 +19,34 @@
 
         <TextView
             android:id="@+id/tv_detail_post_list_contents"
-            android:layout_width="wrap_content"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="50dp"
+            android:layout_marginBottom="5dp"
+            android:maxLines="1"
             android:text=" Lorem Ipsum."
-            android:maxLines="2"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/tv_detail_post_show_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
             android:text="@string/show_more"
-            android:layout_marginTop="5dp"
-            app:layout_constraintStart_toEndOf="@id/tv_detail_post_list_contents"
-            app:layout_constraintTop_toTopOf="@id/tv_detail_post_list_contents"
-            app:layout_constraintBottom_toBottomOf="@id/tv_detail_post_list_contents"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_detail_post_list_contents" />
 
         <ImageView
             android:id="@+id/iv_detail_post_like_btn"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:src="@drawable/selector_heart_button"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tv_detail_post_like_count"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,6 +54,7 @@
             android:id="@+id/tv_detail_post_like_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="5dp"
             android:text="a"
@@ -84,9 +85,9 @@
                 android:id="@+id/iv_detail_post_comment_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/img_cat1"
-                android:scaleType="centerCrop"
                 android:clipToOutline="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_cat1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_detail_post_list_contents" />
         </androidx.cardview.widget.CardView>
