--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -29,7 +29,7 @@
         android:layout_marginEnd="40dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/component_color"
-        android:text="아이디"
+        android:text="@string/id"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,8 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:layout_marginEnd="40dp"
-        android:hint="아이디를 입력하세요."
+        android:textColorHint="@color/gray"
+        android:hint="@string/empty_id_message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_sigup_id"
@@ -66,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:text="비밀번호"
+        android:text="@string/password"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/tv_signin_id_error"
@@ -78,7 +79,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
         android:inputType="textPassword"
-        android:hint="비밀번호를 입력하세요."
+        android:textColorHint="@color/gray"
+        android:hint="@string/empty_password_message"
         android:layout_marginStart="40dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_signup_password" />
 
