--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,7 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="15"
-        android:hint="이름을 입력하세요."
+        android:hint="@string/empty_name_message"
+        android:textColorHint="@color/gray"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@+id/tv_signup_name"
         app:layout_constraintStart_toStartOf="@+id/tv_signup_name"
@@ -55,7 +56,8 @@
         android:layout_height="wrap_content"
         android:ems="15"
         android:inputType="text"
-        android:hint="아이디를 입력하세요."
+        android:textColorHint="@color/gray"
+        android:hint="@string/empty_id_message"
         app:layout_constraintEnd_toEndOf="@+id/tv_sigup_id"
         app:layout_constraintStart_toStartOf="@+id/tv_sigup_id"
         app:layout_constraintTop_toBottomOf="@+id/tv_sigup_id" />
@@ -85,7 +87,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="15"
-        android:hint="비밀번호를 입력하세요."
+        android:hint="@string/empty_password_message"
+        android:textColorHint="@color/gray"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/tv_signup_password"
         app:layout_constraintStart_toStartOf="@+id/tv_signup_password"
@@ -115,7 +118,8 @@
         android:layout_height="wrap_content"
         android:ems="15"
         android:inputType="textPassword"
-        android:hint="비밀번호를 다시 입력하세요."
+        android:hint="@string/empty_password_message"
+        android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="@+id/tv_signup_password2"
         app:layout_constraintStart_toStartOf="@+id/tv_signup_password2"
         app:layout_constraintTop_toBottomOf="@+id/tv_signup_password2"/>
