회원가입 페이지와 프로필 이미지 선택 페이지에서 중복으로 회원가입되던 부분 수정 코틀린 파일의 변수명 조정

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,7 +7,6 @@
     android:background="@color/background_color"
     tools:context=".SignInActivity">
 
-
     <TextView
         android:id="@+id/tv_signin_app_name"
         android:layout_width="wrap_content"
@@ -22,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_sigup_id"
+        android:id="@+id/tv_signin_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -46,7 +45,7 @@
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_sigup_id" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_signin_id" />
 
     <TextView
         android:id="@+id/tv_signin_id_error"
@@ -61,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_signin_id" />
 
     <TextView
-        android:id="@+id/tv_signup_password"
+        android:id="@+id/tv_signin_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -80,7 +79,7 @@
         android:layout_marginEnd="40dp"
         android:hint="비밀번호를 입력하세요."
         android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_signin_password" />
 
     <TextView
         android:id="@+id/tv_signin_password_error"
@@ -125,6 +124,4 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/btn_signin_login" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
