--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_signup_name" />
 
     <TextView
-        android:id="@+id/tv_sigup_id"
+        android:id="@+id/tv_signup_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/id"
@@ -56,9 +56,9 @@
         android:ems="15"
         android:hint="아이디를 입력하세요."
         android:inputType="text"
-        app:layout_constraintEnd_toEndOf="@+id/tv_sigup_id"
-        app:layout_constraintStart_toStartOf="@+id/tv_sigup_id"
-        app:layout_constraintTop_toBottomOf="@+id/tv_sigup_id" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_signup_id"
+        app:layout_constraintStart_toStartOf="@+id/tv_signup_id"
+        app:layout_constraintTop_toBottomOf="@+id/tv_signup_id" />
 
     <TextView
         android:id="@+id/tv_signup_id_error"
