로그인페이지 landmode

--- a/app/src/main/res/layout-land/activity_sign_in.xml
+++ b/app/src/main/res/layout-land/activity_sign_in.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_sigup_id"
+        android:id="@+id/tv_signin_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
@@ -47,7 +47,7 @@
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_sigup_id" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_signin_id" />
 
     <TextView
         android:id="@+id/tv_signin_id_error"
@@ -62,7 +62,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_signin_id" />
 
     <TextView
-        android:id="@+id/tv_signup_password"
+        android:id="@+id/tv_signin_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
@@ -83,7 +83,7 @@
         android:backgroundTint="@color/component_color"
         android:textColorHint="@color/gray"
         android:hint="@string/empty_password_message"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_signin_password" />
 
     <TextView
         android:id="@+id/tv_signin_password_error"
