메인페이지 프로필 원형 이미지뷰 업데이트

--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -68,7 +68,7 @@
     <HorizontalScrollView
         android:id="@+id/scrollview_main_userlist"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="80dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_main_top">
@@ -76,11 +76,12 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
             <ImageView
                 android:id="@+id/iv_main_user1_btn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:background="@drawable/profile_radius_background"
+                android:clipToOutline="true"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/img_cat1"
@@ -90,19 +91,23 @@
 
             <ImageView
                 android:id="@+id/iv_main_user2_btn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:background="@drawable/profile_radius_background"
+                android:clipToOutline="true"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/img_cat2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/iv_main_user1_btn"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <ImageView
                 android:id="@+id/iv_main_user3_btn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:background="@drawable/profile_radius_background"
+                android:clipToOutline="true"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/img_cat3"
@@ -112,8 +117,10 @@
 
             <ImageView
                 android:id="@+id/iv_main_user4_btn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:background="@drawable/profile_radius_background"
+                android:clipToOutline="true"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/img_cat4"
