다크 모드일 때 EditText 내의 text 색상 자동 변경

--- a/app/src/main/res/layout-land/activity_sign_in.xml
+++ b/app/src/main/res/layout-land/activity_sign_in.xml
@@ -51,6 +51,7 @@
                 android:backgroundTint="@color/component_color"
                 android:hint="@string/empty_id_message"
                 android:inputType="text"
+                android:textColor="@color/text_color"
                 android:textColorHint="@color/gray"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -89,6 +90,7 @@
                 android:backgroundTint="@color/component_color"
                 android:hint="@string/empty_password_message"
                 android:inputType="textPassword"
+                android:textColor="@color/text_color"
                 android:textColorHint="@color/gray"
                 app:layout_constraintTop_toBottomOf="@+id/tv_signin_password" />
 
