--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -24,8 +24,9 @@
         android:layout_height="wrap_content"
         android:ems="15"
         android:hint="@string/empty_name_message"
-        android:textColorHint="@color/gray"
         android:inputType="text"
+        android:textColor="@color/text_color"
+        android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="@+id/tv_signup_name"
         app:layout_constraintStart_toStartOf="@+id/tv_signup_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_signup_name" />
@@ -55,9 +56,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="15"
-        android:inputType="text"
-        android:textColorHint="@color/gray"
         android:hint="@string/empty_id_message"
+        android:inputType="text"
+        android:textColor="@color/text_color"
+        android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="@+id/tv_signup_id"
         app:layout_constraintStart_toStartOf="@+id/tv_signup_id"
         app:layout_constraintTop_toBottomOf="@+id/tv_signup_id" />
@@ -88,8 +90,9 @@
         android:layout_height="wrap_content"
         android:ems="15"
         android:hint="@string/empty_password_message"
-        android:textColorHint="@color/gray"
         android:inputType="textPassword"
+        android:textColor="@color/text_color"
+        android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="@+id/tv_signup_password"
         app:layout_constraintStart_toStartOf="@+id/tv_signup_password"
         app:layout_constraintTop_toBottomOf="@+id/tv_signup_password" />
@@ -119,8 +122,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="15"
-        android:inputType="textPassword"
         android:hint="@string/empty_password_message"
+        android:inputType="textPassword"
+        android:textColor="@color/text_color"
         android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="@+id/tv_signup_password2"
         app:layout_constraintStart_toStartOf="@+id/tv_signup_password2"
