--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -40,10 +40,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:textColorHint="@color/gray"
-        android:hint="@string/empty_id_message"
         android:backgroundTint="@color/component_color"
+        android:hint="@string/empty_id_message"
         android:inputType="text"
+        android:textColor="@color/text_color"
+        android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_signin_id" />
@@ -78,10 +79,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:inputType="textPassword"
-        android:textColorHint="@color/gray"
         android:backgroundTint="@color/component_color"
         android:hint="@string/empty_password_message"
+        android:inputType="textPassword"
+        android:textColor="@color/text_color"
+        android:textColorHint="@color/gray"
         app:layout_constraintTop_toBottomOf="@+id/tv_signin_password" />
 
     <TextView
