profile img stroke

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -12,7 +12,7 @@
     <color name="green">#FF0000</color>
     <color name="blue">#FFA500</color>
     <color name="indigo">#FFFF00</color>
-    <color name="violet">#1B212D</color>
+    <color name="violet">#EE82EE</color>
 
     <color name="light_green">#800080</color>
     <color name="sky_blue">#FFC0CB</color>
