--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <androidx.cardview.widget.CardView
         android:id="@+id/iv_card_view"
         android:layout_width="50dp"
@@ -15,11 +16,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
+
         <ImageView
             android:id="@+id/iv_main_user_profile"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:scaleType="centerCrop"
             android:src="@drawable/img_cat2"/>
+        <ImageView
+            android:id="@+id/iv_user_stroke"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/selector_profile_image_background"/>
     </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
