--- a/app/src/main/res/drawable/selector_profile_image_background.xml
+++ b/app/src/main/res/drawable/selector_profile_image_background.xml
@@ -3,5 +3,5 @@
     <corners android:radius="100dp" />
     <stroke
         android:width="3dp"
-        android:color="@color/violet" />
+        android:color="@color/sky_blue" />
 </shape>
