--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -22,8 +22,8 @@
             android:id="@+id/iv_main_logo"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/img_cat6"
+            android:scaleType="centerCrop"
+            android:src="@drawable/logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -45,13 +45,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
-            android:text="안녕하세요"
+            android:text=""
             android:textSize="13sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_main_profile_btn"
-            app:layout_constraintEnd_toStartOf="@+id/iv_main_profile_btn"
-            app:layout_constraintTop_toTopOf="@+id/iv_main_profile_btn" />
+            app:layout_constraintBottom_toBottomOf="@+id/card_view2"
+            app:layout_constraintEnd_toStartOf="@+id/card_view2"
+            app:layout_constraintTop_toTopOf="@+id/card_view2" />
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:cardCornerRadius="100dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
         <ImageView
             android:id="@+id/iv_main_profile_btn"
             android:layout_width="50dp"
@@ -61,6 +69,13 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/iv_user_stroke"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/selector_profile_image_background"/>
+
+        </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <!-- 상단바 영역 끝 -->
 
