--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,11 +7,19 @@
     android:background="@color/background_color"
     tools:context=".SignInActivity">
 
+    <ImageView
+        android:layout_width="50sp"
+        android:layout_height="70sp"
+        android:src="@drawable/logo"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_signin_app_name"
+        app:layout_constraintEnd_toStartOf="@+id/tv_signin_app_name"
+        app:layout_constraintTop_toTopOf="@+id/tv_signin_app_name" />
     <TextView
         android:id="@+id/tv_signin_app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
+        android:layout_marginStart="25sp"
         android:text="@string/app_name"
         android:textColor="@color/text_color"
         android:textSize="50sp"
