--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="black">#FFFFFFFF</color>
     <color name="white">#FF000000</color>
-    <color name="background_color">#FF1F2532</color>
-    <color name="component_color">#FF070F22</color>
+    <color name="background_color">#FF282828</color>
+    <color name="component_color">#777777</color>
     <color name="text_color">#FFFFF38B</color>
 
     <color name="red">#008000</color>
