User.md, Post.md, UserDatabase.md, ChooseProfileActivity.md 작성 selector 변경으로 인한 코드 수정 User, Post 타입 변경

--- a/app/src/main/res/layout/activity_choose_profile.xml
+++ b/app/src/main/res/layout/activity_choose_profile.xml
@@ -7,13 +7,12 @@
     android:background="@color/background_color"
     tools:context=".ChooseProfileActivity">
 
-
     <TextView
         android:id="@+id/tv_choose_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="프로필을 골라주세요!!"
+        android:text="@string/choose_profile_img"
         android:textColor="@color/text_color"
         android:textSize="34sp"
         android:textStyle="bold"
