--- a/app/src/main/res/drawable/selector_profile_image_background.xml
+++ b/app/src/main/res/drawable/selector_profile_image_background.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="100dp" />
-    <stroke
-        android:width="3dp"
-        android:color="@color/sky_blue" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape>
+            <stroke
+                android:width="3dp"
+                android:color="@color/white"/>
+        </shape>
+    </item>
+</selector>
