--- a/app/src/main/res/layout-land/activity_sign_up.xml
+++ b/app/src/main/res/layout-land/activity_sign_up.xml
@@ -145,13 +145,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
+                android:layout_marginBottom="80dp"
                 android:backgroundTint="@color/component_color"
                 android:enabled="false"
                 android:text="@string/next"
                 android:textColor="@color/text_color"
                 app:layout_constraintEnd_toEndOf="@+id/tv_signup_password2_error"
                 app:layout_constraintStart_toStartOf="@+id/tv_signup_password2_error"
-                app:layout_constraintTop_toBottomOf="@+id/tv_signup_password2_error" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_signup_password2_error"
+                app:layout_constraintBottom_toBottomOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
