--- a/app/src/main/res/layout-land/activity_main_page.xml
+++ b/app/src/main/res/layout-land/activity_main_page.xml
@@ -29,7 +29,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_signin_app_name"
+            android:id="@+id/tv_main_app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -74,7 +74,7 @@
         app:layout_constraintTop_toBottomOf="@+id/layout_main_top">
 
         <LinearLayout
-            android:id="@+id/main_user_profile_list"
+            android:id="@+id/layout_main_user_profile_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity= "center_vertical"
@@ -94,7 +94,7 @@
         app:layout_constraintTop_toBottomOf="@+id/scrollview_main_userlist">
 
         <LinearLayout
-            android:id="@+id/layout_main_postlist"
+            android:id="@+id/layout_main_post_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
