--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -24,7 +24,7 @@
             android:scaleType="centerCrop"
             android:src="@drawable/img_cat2"/>
         <ImageView
-            android:id="@+id/iv_user_stroke"
+            android:id="@+id/iv_main_user_stroke"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/shape_profile_image_stroke"/>
